convert to markitdown loaders

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,18 @@
+langchain
+langchain_openai
+langchain_community
+langchain-google-community
+langchain-markitdown
 openai
 python-dotenv
 pyarrow
 pandas
 colored
-unstructured[all-docs]
+pdfminer
+pdf2image 
+Pillow
+pytesseract
 markitdown[all]
-langchain
-langchain_openai
-langchain_community
-langchain-google-community
-langchain-unstructured[local]
 google-api-python-client>=2.100.0
 lxml
 PyMuPDF
