--- a/pytest.ini
+++ b/pytest.ini
@@ -1,5 +1,6 @@
 [pytest]
 testpaths = tests
+python_paths = .
 markers =
     smoke: mark test as smoke test
     regression: mark test as regression test
