--- a/ragdoll/config/default_config.yaml
+++ b/ragdoll/config/default_config.yaml
@@ -16,35 +16,40 @@ ingestion:
   retry_attempts: 3
   retry_delay: 1
   retry_backoff: 2
+  loaders:
+    file_mappings:
+        .json: langchain_community.document_loaders.JSONLoader
+        .jsonl: langchain_community.document_loaders.JSONLoader
+        .yaml: langchain_community.document_loaders.JSONLoader
+        .csv: langchain_community.document_loaders.CSVLoader
+        .epub: langchain_markitdown.loaders.EpubLoader
+        .xlsx: langchain_markitdown.loaders.XlsxLoader
+        .html: langchain_markitdown.loaders.HtmlLoader
+        .bmp: langchain_markitdown.loaders.ImageLoader
+        .jpeg: langchain_markitdown.loaders.ImageLoader
+        .jpg: langchain_markitdown.loaders.ImageLoader
+        .png: langchain_markitdown.loaders.ImageLoader
+        .tiff: langchain_markitdown.loaders.ImageLoader
+        .md: langchain_community.document_loaders.TextLoader
+        .pdf: langchain_community.document_loaders.PyMuPDFLoader
+        .pptx: langchain_markitdown.loaders.PptxLoader
+        .docx: langchain_markitdown.loaders.DocxLoader
+        .xml: langchain_markitdown.loaders.RssLoader
+        .txt: langchain_community.document_loaders.TextLoader
+        .rtf: langchain_community.document_loaders.RtfLoader
+        arxiv: langchain_community.retrievers.ArxivRetriever
+        website: langchain_community.document_loaders.WebBaseLoader
 
 embeddings:
-  enabled: true
-  default_model: openai  
-  openai:
-    model: "text-embedding-3-large"
-    dimensions: 1024
-  huggingface:
-    model_name: "sentence-transformers/all-mpnet-base-v2"
-
-
-  loader_mappings:
-    mappings:
-      .json: langchain_community.document_loaders.JSONLoader
-      .jsonl: langchain_community.document_loaders.JSONLoader
-      .yaml: langchain_community.document_loaders.JSONLoader
-      .csv: langchain_community.document_loaders.CSVLoader
-      .epub: langchain_markitdown.EpubLoader
-      .xlsx: langchain_markitdown.XlsxLoader
-      .html: langchain_markitdown.HtmlLoader
-      .bmp: langchain_markitdown.ImageLoader
-      .jpeg: langchain_markitdown.ImageLoader
-      .jpg: langchain_markitdown.ImageLoader
-      .png: langchain_markitdown.ImageLoader
-      .tiff: langchain_markitdown.ImageLoader
-      .md: langchain_community.document_loaders.TextLoader
-      .pdf: langchain_community.document_loaders.PyMuPDFLoader
-      .pptx: langchain_markitdown.PptxLoader
-      .docx: langchain_markitdown.DocxLoader
-      .xml: langchain_markitdown.RssLoader
-      .txt: langchain_community.document_loaders.TextLoader
-      .rtf: langchain_community.document_loaders.RtfLoader
+  enabled: true  
+  default_client: openai
+  clients:  
+    openai:  
+      client: openai
+      model: "text-embedding-3-large"
+      dimensions: 1024
+    huggingface:      
+      model: "sentence-transformers/all-mpnet-base-v2"
+      client: huggingface
+      model: "sentence-transformers/all-mpnet-base-v2"
+      api_key: "your_default_api_key"     
