repair cache for ingestion service - broken in refactor :(

--- a/ragdoll/config/default_config.yaml
+++ b/ragdoll/config/default_config.yaml
@@ -1,8 +1,10 @@
 cache:
   enabled: true
+  cache_ttl: 3600
 
 monitor:
   enabled: false
+  collect_metrics: true
 
 chunker:
   default_splitter: markdown
