bugfix llm integration for entity extraction

--- a/ragdoll/config/default_config.yaml
+++ b/ragdoll/config/default_config.yaml
@@ -151,6 +151,34 @@ llm_prompts:
 
 llms:
   model_list:
+    - model_name: basic_model
+      provider: openai
+      params:
+        model: gpt-3.5-turbo
+        api_key: #OPENAI_API_KEY
+        temperature: 0.0
+        max_tokens: 1024
+    - model_name: default_model
+      provider: openai
+      params:
+        model: gpt-4o
+        api_key: #OPENAI_API_KEY
+        temperature: 0.0
+        max_tokens: 8192
+    - model_name: reasoning_model
+      provider: openai
+      params:
+        model: gpt-4o
+        api_key: #OPENAI_API_KEY
+        temperature: 0.0
+        max_tokens: 8192
+    - model_name: vision_model
+      provider: openai
+      params:
+        model: gpt-4o
+        api_key: #OPENAI_API_KEY
+        temperature: 0.0
+        max_tokens: 8192
     - model_name: gpt-3.5-turbo
       provider: openai
       params:
@@ -179,6 +207,3 @@ llms:
         api_key: #GOOGLE_API_KEY
         temperature: 0.0
         max_tokens: 1024
-  default_model: gpt-4o
-  reasoning_model: gpt-4o
-  vision_model: gpt-4o
