--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,28 @@
-openai
-python-dotenv
-pyarrow
-pandas
-colored
-langchain
-langchain_openai
-langchain_community
-langchain-google-community
-google-api-python-client>=2.100.0
-lxml
-PyMuPDF
-faiss-cpu
-colorlog
-sentence_transformers 
-pyperclip
+# Core dependencies
+numpy>=2.0.0
+python-dotenv>=1.0.1
+pyarrow>=19.0.1
+pandas>=2.2.3
+colored>=2.2.4
+colorlog>=6.8.2
+pyperclip>=1.8.2
+
+# LangChain ecosystem
+langchain>=0.3.23
+langchain-core>=0.3.59
+langchain-text-splitters>=0.3.8
+langchain_community>=0.3.21
+langchain_openai>=0.3.12
+langchain-google-community>=2.0.7
+
+# Document processing
+lxml>=5.1.0
+PyMuPDF>=1.25.5
+langchain-markitdown>=0.1.6
+docx>=0.2.4
+
+# ML/AI dependencies
+openai>=1.71.0
+google-api-python-client>=2.166.0
+sentence_transformers>=4.1.0
+faiss-cpu>=1.11.0
