--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -2,8 +2,7 @@ name: Upload Python Package
 
 on:
   push:
-    tags:
-      - 'v*'  # Trigger on version tags like v1.2.0
+    branches: [release]
 
 permissions:
   contents: read
