Refactor imports and improve code readability across multiple files; update requirements for consistency

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,5 +1,6 @@
 [pytest]
 testpaths = tests
 markers =
+    unit: mark test as unit test
     smoke: mark test as smoke test
     regression: mark test as regression test
