--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,27 @@
-langchain
-langchain_openai
-langchain-huggingface
-langchain_community
-langchain-google-community
-langchain-markitdown
-openai
-python-dotenv
-pyarrow
-pandas
-colored
-pdfminer-six
-pdf2image 
-Pillow
-pytesseract
-google-api-python-client>=2.100.0
-lxml
-pymupdf
-faiss-cpu
-colorlog
-sentence_transformers 
-pyperclip
-requests
-bs4
-retry
+langchain==0.2.6
+langchain-openai==0.1.14
+langchain-huggingface==0.0.3
+langchain-community==0.2.6
+langchain-google-community==1.0.6
+langchain-text-splitters==0.2.2
+langchain-markitdown==0.1.0
+python-dotenv==1.0.1
+# openai  # not referenced anywhere in the codebase
+# pyarrow  # no imports
+# pandas  # no imports
+# colored  # no imports
+# pdfminer-six  # no imports
+# pdf2image  # no imports
+# Pillow  # no imports
+# pytesseract  # no imports
+# google-api-python-client>=2.100.0  # no imports
+# lxml  # no imports
+# pymupdf  # no imports
+# faiss-cpu  # no imports
+# colorlog  # no imports
+# sentence_transformers  # no imports
+# pyperclip  # no imports
+# requests  # no imports
+# bs4  # no imports
+retry==0.9.2
+pytest==9.0.0
