fix: update filterwarnings in pytest.ini and improve code formatting in base_config.py and test_ingestion_service.py

--- a/pytest.ini
+++ b/pytest.ini
@@ -4,3 +4,6 @@ markers =
     unit: mark test as unit test
     smoke: mark test as smoke test
     regression: mark test as regression test
+filterwarnings =
+    ignore:Type google\._upb\._message\.MessageMapContainer uses PyType_Spec with a metaclass that has custom tp_new\.:DeprecationWarning
+    ignore:Type google.\_upb\._message.ScalarMapContainer uses PyType_Spec with a metaclass that has custom tp_new\. This is deprecated and will no longer be allowed in Python 3.14.:DeprecationWarning
