--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,21 @@
-langchain==0.2.6
-langchain-openai==0.1.14
-langchain-huggingface==0.0.3
-langchain-community==0.2.6
+langchain==1.0.5
+langchain-openai==1.0.2
+langchain-huggingface==1.0.1
+langchain-community==0.4.1
 langchain-chroma==1.0.0
 chromadb==1.3.4
-langchain-core==0.2.43
-langchain-google-community==1.0.8
-langchain-text-splitters==0.2.4
+langchain-core==1.0.4
+langsmith==0.4.42
+langchain-google-community==3.0.0
+langchain-text-splitters==1.0.0
 langchain-markitdown==0.1.6
 openai>=1.40.0
 python-dotenv==1.0.1
+retry==0.9.2
+pytest==9.0.0
+flask==3.0.0
+flask-cors==4.0.0
+spacy>=3.7.0
 # openai  # not referenced anywhere in the codebase
 # pyarrow  # no imports
 # pandas  # no imports
@@ -27,8 +33,3 @@ python-dotenv==1.0.1
 # pyperclip  # no imports
 # requests  # no imports
 # bs4  # no imports
-retry==0.9.2
-pytest==9.0.0
-flask==3.0.0
-flask-cors==4.0.0
-spacy>=3.7.0
