Enriched the LLM parsing
• Enriched the LLM parsing/prompt path so relationship extraction adapts to different schemas and providers (ragdoll/entity_extraction/relationship_parser.py (lines 13-120), ragdoll/entity_extraction/entity_extraction_service.py (lines 45-220)). You can now configure entity_extraction.relationship_parsing and relationship_prompts (see ragdoll/config/default_config.yaml (lines 60-140) plus ragdoll/config/base_config.py (lines 196-218)) to pick parser classes, custom schemas, or provider-specific prompt templates; the service infers providers when possible and falls back to per-provider overrides.
• Wired the graph retriever factory into the orchestration layer. GraphPersistenceService now exposes LangChain-compatible retrievers (simple or Neo4j) with safer Pydantic handling (ragdoll/entity_extraction/graph_persistence.py (lines 15-360)), EntityExtractionService can create retrievers once persistence finishes (ragdoll/entity_extraction/entity_extraction_service.py (lines 70-205)), and IngestionPipeline keeps track of the last graph plus an instantiated retriever (ragdoll/pipeline/__init__.py (lines 26-245)). Config defaults (graph_retriever section) control the backend and settings.
• Added regression tests for the new behaviour: richer parser formats and schema injection (tests/test_relationship_parser.py (lines 1-50)), GraphPersistenceService retriever hooks (tests/test_graph_persistence.py), and pipeline-level exposure of the retriever (tests/test_pipeline_graph.py). Full test suite: pytest (69 passed; expected LangChain deprecation warning about get_relevant_documents remains).

--- a/ragdoll/config/default_config.yaml
+++ b/ragdoll/config/default_config.yaml
@@ -153,6 +153,20 @@ entity_extraction:
   output_format: "json"
   graph_database_config:
     output_file: "graph_output.json"
+  relationship_parsing:
+    preferred_format: "auto"
+    parser_class:
+    schema:
+    parser_kwargs: {}
+  relationship_prompts:
+    default: "relationship_extraction"
+    providers: {}
+  graph_retriever:
+    enabled: false
+    backend: "simple"
+    top_k: 5
+    include_edges: true
+  llm_provider_hint:
 
 # References to prompt files (without .md extension)
 llm_prompts:
