--- a/pytest.ini
+++ b/pytest.ini
@@ -7,3 +7,6 @@ markers =
 filterwarnings =
     ignore:Type google\._upb\._message\.MessageMapContainer uses PyType_Spec with a metaclass that has custom tp_new\.:DeprecationWarning
     ignore:Type google.\_upb\._message.ScalarMapContainer uses PyType_Spec with a metaclass that has custom tp_new\. This is deprecated and will no longer be allowed in Python 3.14.:DeprecationWarning
+    ignore:Field "model_name" has conflict with protected namespace "model_":UserWarning
+    ignore:Retrievers must implement abstract `_get_relevant_documents`:DeprecationWarning:langchain_core.retrievers
+    ignore:The method `BaseRetriever.get_relevant_documents`:langchain_core._api.deprecation.LangChainDeprecationWarning
