Update CI to use new pyproject format

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,13 +26,9 @@ jobs:
       - name: Install pip
         run: python -m pip install --upgrade pip
 
-      - name: Install base dependencies
+      - name: Install dependencies with dev extras
         run: |
-          python -m pip install -r requirements.txt
-
-      - name: Install dev dependencies
-        run: |
-          python -m pip install -r requirements-dev.txt
+          python -m pip install -e .[dev]
 
       - name: Run tests
         run: |
