--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,7 +37,7 @@ dependencies = [
     "langsmith==0.4.42",
     "langchain-google-community==3.0.0",
     "langchain-text-splitters==1.0.0",
-    "langchain-markitdown==0.1.6",
+    "langchain-markitdown>=1.0.0",
     "openai>=1.40.0",
     "python-dotenv==1.0.1",
     "retry==0.9.2",
