neo4j match delete, added flag
Added an explicit clear_before_save toggle to entity_extraction.graph_database_config in both the Pydantic model and the default YAML so users can opt into wiping their Neo4j database per run (ragdoll/config/base_config.py, ragdoll/config/default_config.yaml).
Updated GraphPersistenceService._save_neo4j to respect the new flag—MATCH (n) DETACH DELETE n only runs when clear_before_save is True, preventing surprise data loss for existing databases (ragdoll/entity_extraction/graph_persistence.py (lines 178-214)).
Documented the flag in docs/graph_stores.md so users know how to enable or disable the behavior.

--- a/ragdoll/config/default_config.yaml
+++ b/ragdoll/config/default_config.yaml
@@ -153,6 +153,7 @@ entity_extraction:
   output_format: "json"
   graph_database_config:
     output_file: "graph_output.json"
+    clear_before_save: false
   relationship_parsing:
     preferred_format: "auto"
     parser_class:
