--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,6 +43,10 @@ dependencies = [
     "retry==0.9.2",
     "flask==3.0.0",
     "flask-cors==4.0.0",
+    "fastapi==0.115.2",
+    "uvicorn==0.30.6",
+    "jinja2==3.1.4",
+    "python-multipart==0.0.9",
 ]
 
 [project.optional-dependencies]
