feat(tests): enhance GraphRetriever tests with improved mock graph store functionality

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -52,6 +52,7 @@ dependencies = [
 [project.optional-dependencies]
 dev = [
     "pytest==9.0.0",
+    "pytest-asyncio>=0.23.0",
     "coverage",
     "black",
     "isort",
