chore: bump version to 2.1.2 and update entity extraction method
- Updated version in pyproject.toml from 2.1.1 to 2.1.2.
- Changed default entity extraction method in default_config.yaml from "llm" to "ner".
- Enhanced IngestionPipeline to collect extra graph store configuration options and improved formatting for Document creation.

--- a/ragdoll/config/default_config.yaml
+++ b/ragdoll/config/default_config.yaml
@@ -63,7 +63,7 @@ entity_extraction:
   chunk_overlap: 50
   splitter_type: "markdown"
   coreference_resolution_method: "rule_based"  # Options: "rule_based", "llm", "none"
-  entity_extraction_methods: ["llm"] # Options: ["ner", "llm"]
+  entity_extraction_methods: ["ner"] # Options: ["ner", "llm"]
   relationship_extraction_method: "llm"
   entity_types:
     - "PERSON"
