feat: Enhance graph store utilities and retrieval mechanisms
- Refactored `get_graph_store` function to improve configuration handling and logging.
- Updated Neo4j, NetworkX, and JSON graph store creation functions for better attribute management and error handling.
- Enhanced `IngestionPipeline` to ensure vector embeddings are created when entity extraction is enabled, with appropriate metadata storage.
- Introduced embedding-based similarity search in `GraphRetriever`, allowing for more relevant seed node selection.
- Added support for fallback mechanisms in `GraphRetriever` when embedding models or vector stores are unavailable.
- Implemented a `VectorStoreAdapter` to unify embedding retrieval across different vector store backends (Chroma, FAISS, etc.).
- Improved logging throughout the code for better traceability and debugging.

--- a/ragdoll/config/default_config.yaml
+++ b/ragdoll/config/default_config.yaml
@@ -184,6 +184,10 @@ retriever:
     include_edges: true
     traversal_strategy: "bfs"  # Options: "bfs" (breadth-first), "dfs" (depth-first)
     min_score: 0.0
+    prebuild_index: false  # Whether to build FAISS index during ingestion (vs lazy on first query)
+    hybrid_alpha: 1.0  # Weight for embedding similarity vs BM25 lexical matching (1.0 = embedding only)
+    enable_fallback: true  # If true, fall back to fuzzy matching when embedding search fails
+    log_fallback_warnings: true  # If true, log warnings when fallback mechanisms are used
   
   # Hybrid combination settings
   hybrid:
