--- a/pyproject.toml
+++ b/pyproject.toml
@@ -47,6 +47,7 @@ dependencies = [
     "uvicorn==0.30.6",
     "jinja2==3.1.4",
     "python-multipart==0.0.9",
+    "rapidfuzz>=3.0.0",
 ]
 
 [project.optional-dependencies]
