Refactor parallel execution in RAGdoll 2.1: Migrate logic from IngestionPipeline to BaseVectorStore, implement new async methods for document addition, enhance configuration management, and improve performance with comprehensive testing and documentation updates.

--- a/ragdoll/config/default_config.yaml
+++ b/ragdoll/config/default_config.yaml
@@ -46,6 +46,7 @@ ingestion:
 embeddings:
   enabled: true
   default_model: "text-embedding-3-small"
+  max_concurrent_embeddings: 3  # Number of embedding batches to process concurrently (3-5x speedup)
   models:
     text-embedding-3-small:
       provider: "openai"
