chore: Update pytest.ini to ignore additional DeprecationWarnings for Swig types

--- a/pytest.ini
+++ b/pytest.ini
@@ -11,3 +11,6 @@ filterwarnings =
     ignore:Field "model_name" has conflict with protected namespace "model_":UserWarning
     ignore:Retrievers must implement abstract `_get_relevant_documents`:DeprecationWarning:langchain_core.retrievers
     ignore:The method `BaseRetriever.get_relevant_documents`:langchain_core._api.deprecation.LangChainDeprecationWarning
+    ignore:builtin type SwigPyPacked has no __module__ attribute:DeprecationWarning
+    ignore:builtin type SwigPyObject has no __module__ attribute:DeprecationWarning
+    ignore:builtin type swigvarlink has no __module__ attribute:DeprecationWarning
